feat: 에디터 장소 상세 조회 기능 개선 및 통계 정보 추가